API changes for authentication

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="parent-lay">
   <div class="headers">
     <h2 class="username">Divyabharathi .K</h2>
     <h6 class="admin">ADMIN</h6>
