--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
@@ -1,8 +1,8 @@
 .parent {
   display: flex;
   flex-direction: column;
-  width: 80%;
-  margin-left: auto;
+  width: 75%;
+  margin-left: 16%;
   margin-right: auto;
   margin-bottom: 24px;
 }
