--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.css
@@ -1,48 +1,52 @@
-.card{
-    width: 35%;
-    padding: 24px;
-    margin: 24px;
-    color: #ffffff;
-    background-image: linear-gradient(-120deg,lightblue,#1776bf,#0f4c7b);
+.card {
+  width: 35%;
+  padding: 24px;
+  margin: 24px;
+  color: #ffffff;
+  background-image: linear-gradient(-120deg, lightblue, #1776bf, #0f4c7b);
 }
 
-.headers{
-    padding: 0;
-    margin: 0;
+.parent-lay {
+  width: 84%;
+  margin-left: 16%;
+}
+.headers {
+  padding: 0;
+  margin: 0;
 }
 
-.headers .username{
-    /* background-color: lawngreen; */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 0;
-    margin: 0;
-    margin-left: 24px;
+.headers .username {
+  /* background-color: lawngreen; */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 0;
+  margin: 0;
+  margin-left: 24px;
 }
 
-.headers .admin{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: lightgreen;
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    width: min-content;
-    border-radius: 4px;
-    margin-top: 10px;
-    margin-left: 24px;
+.headers .admin {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: lightgreen;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  width: min-content;
+  border-radius: 4px;
+  margin-top: 10px;
+  margin-left: 24px;
 }
-.parent{
-    display: flex;
-    justify-content: center;
-}
-
-.card-set{
-    display: flex;
-    width: 80%;
+.parent {
+  display: flex;
+  justify-content: center;
 }
 
-.number-values{
-    font-size: xx-large;
-    font-weight: bolder;
-    margin-top: 16px;
+.card-set {
+  display: flex;
+  width: 80%;
+}
+
+.number-values {
+  font-size: xx-large;
+  font-weight: bolder;
+  margin-top: 16px;
 }
