--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
@@ -2,13 +2,15 @@
   font-family: sans-serif;
   font-weight: bolder;
   font-size: x-large;
-  margin-left: 24px;
+  margin-left: 17%;
 }
+
 .categories {
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
   width: 80%;
+  margin-left: 16%;
 }
 .matcard-categories {
   cursor: pointer;
@@ -35,12 +37,27 @@
   border-radius: 15px;
 }
 
-.fab{
+.fab {
   position: fixed;
   bottom: 24px;
   right: 24px;
 }
-
+.options {
+  position: fixed;
+  bottom: 80px;
+  right: 24px;
+  color: #fff;
+  display: none;
+  align-items: flex-end;
+  flex-direction: column;
+  width: max-content;
+}
+.options-button {
+  background-color: #1776bf;
+  border-radius: 20px;
+  margin-bottom: 10px;
+  width: min-content;
+}
 /* ----------------------Added by preethi------------------------------------------------- */
 
 .dlt-button {
