--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/main/main.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/main/main.component.html
@@ -1,5 +1,7 @@
 <div>
     <div class="parent">
+     
+      <app-filters></app-filters>
       <app-search class="app-search"></app-search>
       <div class="toolbar"></div>
       <!-- <div class="breadcrumbs">
@@ -16,7 +18,7 @@
     </div>
   
     <div class="main-layout">
-      <app-filters></app-filters>
+      <!-- <app-filters></app-filters> -->
       <mat-divider [vertical]="true"></mat-divider>
       <div class="router"><router-outlet></router-outlet></div>
     </div>
