--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
@@ -5,8 +5,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
-  width: 100% !important;
+  margin-left: 16%;
+  /* z-index: 2; */
+  width: 84% !important;
 }
 
 .search {
