--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/login/login.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/login/login.component.css
@@ -57,12 +57,23 @@
   font-weight: 400;
 }
 
+.password-icon{
+  align-self: center;
+  vertical-align: middle;
+  cursor: pointer;
+  padding: 4px;
+  margin-right: 8px;
+  color: #d6d6d6;
+}
+
 .loginbutton {
   background-color: #1776bf;
   color: #fff;
-  width: 100%;
+  width:92%;
   margin-top: 16px;
   margin-bottom: 16px;
+  margin-left: 16px;
+  margin-right: 16px;
   height: 50px;
   /* bottom: 16px; */
 }
