--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/main/main.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/main/main.component.html
@@ -23,4 +23,14 @@
       <div class="router"><router-outlet></router-outlet></div>
     </div>
   </div>
-  
+  <button mat-fab class="fab" (click)="openOptions()">
+    <mat-icon>add</mat-icon>
+  </button>
+  <div id="options" class="options">
+    <button mat-button class="options-button" (click)="addQAEntry()">
+      Add a troubleshooting step
+    </button>
+    <button mat-button class="options-button" (click)="openDialog()">
+      Post a question
+    </button>
+  </div>
