--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
@@ -1,6 +1,6 @@
 <div class="list-of-questions">
   <ul>
-    <mat-card class="question-card" matRipple [matRippleColor]="myColor" *ngFor="let list of getQuestions()">
+    <mat-card class="question-card" matRipple *ngFor="let list of getQuestions()">
       <div class="question-item">
         <div class="answer-layout">
           <div class="no-of-answers">{{ list.answerCount }}</div>
