--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.html
@@ -11,7 +11,7 @@
     class="matcard-categories"
     *ngFor="let list of getResponse()"
     (click)="onClick(list)"
-    matRipple [matRippleColor]="myColor"
+    matRipple 
     [routerLink]="['/main/category', list]"
   >
     <p class="button-text">{{ list }}</p>
