--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
@@ -1,7 +1,7 @@
 <div class="list-of-questions">
     <ul>
       <!-- <mat-card class="question-card" *ngFor="let list of getQuestions()" [routerLink]="['/qnas', list.Question.id]" (click)= "onClick(list.Question.id)"> -->
-      <mat-card class="question-card" *ngFor="let list of getQuestions()" matRipple [matRippleColor]="myColor" >
+      <mat-card class="question-card" *ngFor="let list of getQuestions()" matRipple >
         <div class="question-item">
           <div class="answer-layout">
             <div class="no-of-answers">{{ list.answerCount }}</div>
