--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/main/main.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/main/main.component.html
@@ -30,7 +30,7 @@
     <button mat-button class="options-button" (click)="addQAEntry()">
       Add a troubleshooting step
     </button>
-    <button mat-button class="options-button" (click)="openDialog()">
+    <button mat-button class="options-button" (click)="addQuestion()">
       Post a question
     </button>
   </div>
