--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,5 @@
 .card {
+  cursor: pointer;
   width: 35%;
   padding: 24px;
   margin: 24px;
@@ -19,7 +20,9 @@
   /* background-color: lawngreen; */
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 0;
-  margin: 0;
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: 24px;
 }
 
