1. Review questions 2. Approval of questions 3. Separate index for approved questions

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.css
@@ -124,3 +124,9 @@
 .chips:hover {
   background-color: darkgray;
 }
+
+.apply-button {
+  float: right;
+  margin-top: 10px;
+  margin-right: 10px;
+}
