--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
@@ -22,6 +22,10 @@
 .answer-layout {
   margin-left: 20px;
   margin-right: 20px;
+  word-break: break-all;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  width: 90%;
 }
 
 .answer {
